# HFT_APP

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
expanations/: macros.txt  memory_pool.txt  thread.txt
include/common/: lock_free_queue.hpp  logging.hpp  macros.hpp  memory_pool.hpp  socket_utils.hpp  tcp_server.hpp  tcp_socket.hpp  thread_utils.hpp  times_utils.hpp  types.hpp
include/exchange/market_data/: market_update.hpp
include/exchange/matcher/: matching_engine.hpp  me_order.hpp
include/exchange/order_server/: client_request.hpp  client_response.hpp
src/: main.cpp
src/common/: tcp_server.cpp  tcp_socket.cpp
src/exchange/matcher/: matching_engine.cpp  me_order.cpp
tests/: test_lock_free.cpp  test_logging.cpp  test_memory_pool.cpp  test_socket_utils.cpp  test_thread_utils.cpp
